--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: simon@sgdjs.net
 description: > # this means to ignore newlines until "baseurl:"
     Hub for sgdjs activity on the web
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.hub.sgdjs.net" # the base hostname & protocol for your site
+url: "http://www.sgdjs.net" # the base hostname & protocol for your site
 twitter_username: _gdjs
 github_username:  sgdjs
 
