--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: sgdjs
 email: simon@sgdjs.net
 description: > # this means to ignore newlines until "baseurl:"
-    Hub for sgdjs activity on the web
+    make things great
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.sgdjs.net" # the base hostname & protocol for your site
 twitter_username: _gdjs
